--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <meta charset="utf-8" />
     <title id="title">
       Exponential Madness v0.31
     </title>
@@ -9,6 +10,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body id="body">
+<script src="chs.js"></script>
+<script src="core.js"></script>
     <button type="button" class="veryBig" onclick="toTab('mult')">
       Multipliers
     </button>
@@ -393,4 +396,21 @@
   </body>
   <script type="text/javascript" src="break_eternity.js"></script>
   <script type="text/javascript" src="main.js"></script>
+<!--客服 开始-->
+<script src="//g8hh.github.io/static/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.github.io/static/js/kf.js"></script>
+<!-- 客服 结束 -->
+<!--站长统计-->
+    <div style="display: none">
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?6581389daf4dd6fe7dbb4d20fdcb52a6";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+    </div>
 </html>
